<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/text_holder">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/alata"
                android:gravity="center"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@string/welcome_to_flashcards"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold|italic" />
        </FrameLayout>

        <Button
            android:id="@+id/btn_to_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_design"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/sign_up"
            android:textColor="#436CA8"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_to_sign_in"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="100dp"
            android:background="@drawable/button_design"
            android:fontFamily="@font/alata"
            android:gravity="center"
            android:shadowColor="@color/black"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/login"
            android:textColor="#436CA8"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>